stop timeline not showing when coming back to home

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,7 +149,6 @@ header {
 .logo {
   display: inline-block;
   width: 20%;
-  pointer-events: none;
 }
 
 .radio-link {
